--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:turbo": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.1.2",
+    "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
+    "htmr": "^1.0.2",
+    "lucide-react": "^0.292.0",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18"
