chore: add manual trigger

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,7 @@
 name: Schedule Build Trigger
 
 on:
+  workflow_dispatch: # Manually trigger a workflow run
   schedule:
     - cron: '45 12 * * 6'
 
