--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add LAST_DEPLOY
-          git commit -m "Update last deploy timestamp"
+          git commit -m "Update last deploy timestamp [skip ci]"
           git push
 
       - name: Build hook request
